# helix-discord-plugin

./: .gitignore  README.md
discord-activity/: Cargo.toml
discord-activity/src/: discord.rs  main.rs  message.rs  packet.rs  socket.rs  websocket.rs
