[package]
name = "discord-activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4"] }
